contrib/chart/backstage/backstage/templates/backend-deployment.yaml
---
# Source: backstage/templates/backend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage-backend

spec:
  ports:
    - port: 80
      targetPort: 7007

  selector:
    app: backstage
    component: backend

  type: ClusterIP
---
# Source: backstage/templates/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage-backend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backstage
      component: backend

  template:
    metadata:
      annotations:
        ad.datadoghq.com/backstage.logs: '[{"source":"backstage","service":"backend"}]'
      labels:
        app: backstage
        component: backend

    spec:
      containers:
        - name: backstage-backend
          command: ["node"]
          args:
            - "packages/backend"
            - "--config"
            - "app-config.yaml"
            - "--config"
            - "/usr/src/app/app-config.development.yaml"
          image: martinaif/backstage-k8s-demo-backend:20210423T1550
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7007
          resources:
            limits:
              memory: 1024Mi
            requests:
              memory: 512Mi

          volumeMounts:
            - name: postgres-ca
              mountPath: /etc/postgresql
            - name: app-config
              mountPath: /usr/src/app/app-config.development.yaml
              subPath: app-config.development.yaml

      volumes:
        - name: postgres-ca
          configMap:
            name: backstage-postgres-ca
        - name: app-config
          configMap:
            name: backstage-app-config
