contrib/chart/backstage/backstage/templates/frontend-deployment.yaml
---
# Source: backstage/templates/frontend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage-frontend

spec:
  ports:
    - port: 80
      targetPort: 80

  selector:
    app: backstage
    component: frontend

  type: ClusterIP
---
# Source: backstage/templates/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage-frontend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backstage
      component: frontend

  template:
    metadata:
      annotations:
        ad.datadoghq.com/backstage.logs: '[{"source":"backstage","service":"frontend"}]'
      labels:
        app: backstage
        component: frontend

    spec:
      containers:
        - name: backstage-frontend
          image: martinaif/backstage-k8s-demo-frontend:test1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: 256Mi
            requests:
              memory: 128Mi
          volumeMounts:
            - name: app-config
              mountPath: /usr/share/nginx/html/static/app-config.development.yaml
              subPath: app-config.development.yaml
      volumes:
        - name: app-config
          configMap:
            name: backstage-app-config
